[gd_scene load_steps=3 format=3 uid="uid://c5sj2qwqq8cuk"]

[ext_resource type="PackedScene" uid="uid://cnwrd7hpu5vww" path="res://Scenes/Objects/2D/Audience/Items/ItemBase.tscn" id="1_er53b"]
[ext_resource type="Script" path="res://Scenes/Objects/2D/Audience/Items/ItemTestButtons.gd" id="2_uijv8"]

[node name="ItemBaseTest" type="Node2D"]

[node name="ItemBase" parent="." instance=ExtResource("1_er53b")]
position = Vector2(866, 316)

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_uijv8")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SimThrow" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "SimulateThrow"

[node name="Break" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Call Break"

[node name="Impact" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Call Impact"

[node name="TestImpactParticles" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spawn Impact Particles"

[node name="TestBreakParticles" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spawn Break Particles"

[node name="FallInfluence" type="CheckButton" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Falling?"

[node name="HandHeldAction" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Handheld - EmitParticles"

[connection signal="pressed" from="Control/VBoxContainer/SimThrow" to="Control" method="_on_sim_throw_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Break" to="Control" method="_on_break_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Impact" to="Control" method="_on_impact_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/TestImpactParticles" to="Control" method="_on_test_impact_particles_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/TestBreakParticles" to="Control" method="_on_test_break_particles_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/FallInfluence" to="Control" method="_on_fall_influence_toggled"]
[connection signal="button_down" from="Control/VBoxContainer/HandHeldAction" to="Control" method="_on_hand_held_action_button_down"]
